--- a/content/post/2017-05-22-tidytext-analysis-of-seinfeld.Rmd
+++ b/content/post/2017-05-22-tidytext-analysis-of-seinfeld.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(message = FALSE, warnings = FALSE)
 ```
 
 
-I began working on the basis of this post nearly two years ago, when I read an [article](http://www.slate.com/articles/arts/culturebox/2015/07/seinfeld_on_hulu_how_jerry_kramer_george_and_elaine_evolved_over_the_sitcom.html) analyzing how Seinfeld had changed over its seasons. At the time, I was still a student and thought using the scripts as data for a class project would be interesting. I got as far as beginning to crudely scrape the data, but realized I did not know where to begin as far as any analysis. So instead I did the project on something else, and left the Seinfeld data to gather figurative dust. More recently, I learned of the `tidytext` package and it's excellent book, "[Text Mining with R](http://tidytextmining.com/)" by [Julia Silge](http://juliasilge.com/) and [David Robinson](http://varianceexplained.org/), and now have the knowledge and tools to complete the project.
+I began working on the basis of this post nearly two years ago, when I read an [article](http://www.slate.com/articles/arts/culturebox/2015/07/seinfeld_on_hulu_how_jerry_kramer_george_and_elaine_evolved_over_the_sitcom.html) analyzing how Seinfeld had changed over its seasons. At the time, I was still a student and thought using the scripts as data for a class project would be interesting. I got as far as beginning to crudely scrape the data, but realized I did not know where to begin as far as any analysis. So instead I did the project on something else, and left the Seinfeld data to gather figurative dust. More recently, I learned of the `tidytext` package and it's excellent book, "[Text Mining with R](http://tidytextmining.com/)" by [Julia Silge](http://juliasilge.com/) and [David Robinson](http://varianceexplained.org/), and now have more knowledge and tools to complete the project.
 
 ## The Data
 
@@ -413,7 +413,7 @@ htmlwidgets::saveWidget(top_episode_table, file = "top_episode_table.html",
 
 <iframe seamless src="../top_episode_table/index.html" width="100%" height="500"></iframe>
 
-Many of the most important words are taken directly from the title, which means it works fairly well. There are also many episodes where character names unique to that episode are most important, but there are other ones which are very interesting. 
+Many of the most important words can also be found in the title. There are also many episodes where character names unique to that episode are most important. Looking through the table we see other ones that can help us remember what happened in certain episodes. 
 
 Lastly, we can look at the network of words to see which words are most related with one another. First we tidy the data, but instead of having one word per row, this time we use two. We then separate the words into different columns, and filter out rows where either word is a stop word. We then use the `igraph` and `ggraph` packages to get the necessary information to make the graph.
 
