--- a/content/post/2017-05-22-tidytext-analysis-of-seinfeld.Rmd
+++ b/content/post/2017-05-22-tidytext-analysis-of-seinfeld.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Tidytext Analysis of Seinfeld
+title: Tidytext Analysis of *Seinfeld*
 author: Michael Groesbeck
 date: '2017-05-22'
 slug: tidytext-analysis-of-seinfeld
@@ -25,11 +25,11 @@ knitr::opts_chunk$set(message = FALSE, warnings = FALSE)
 ```
 
 
-I began working on the basis of this post nearly two years ago, when I read an [article](http://www.slate.com/articles/arts/culturebox/2015/07/seinfeld_on_hulu_how_jerry_kramer_george_and_elaine_evolved_over_the_sitcom.html) analyzing how Seinfeld had changed over its seasons. At the time, I was still a student and thought using the scripts as data for a class project would be interesting. I got as far as beginning to crudely scrape the data, but realized I did not know where to begin as far as any analysis. So instead I did the project on something else, and left the Seinfeld data to gather figurative dust. More recently, I learned of the `tidytext` package and it's excellent book, "[Text Mining with R](http://tidytextmining.com/)" by [Julia Silge](http://juliasilge.com/) and [David Robinson](http://varianceexplained.org/), and now have more knowledge and tools to complete the project.
+I began working on the basis of this post nearly two years ago, when I read an [article](http://www.slate.com/articles/arts/culturebox/2015/07/seinfeld_on_hulu_how_jerry_kramer_george_and_elaine_evolved_over_the_sitcom.html) analyzing how *Seinfeld* had changed over its seasons. At the time, I was still a student and thought using the scripts as data for a class project would be interesting. I got as far as beginning to crudely scrape the data, but realized I did not know where to begin as far as any analysis. So instead I did the project on something else, and left the *Seinfeld* data to gather figurative dust. More recently, I learned of the `tidytext` package and it's excellent book, "[Text Mining with R](http://tidytextmining.com/)" by [Julia Silge](http://juliasilge.com/) and [David Robinson](http://varianceexplained.org/), and decided to continue the project.
 
 ## The Data
 
-Seinfeld ran for nine seasons from 1989 - 1998, with a total of 180 episodes. Often called "the show about nothing", the series was about Jerry Seinfeld, and his day to day life with friends, George Costanza, Elaine Benes, and Cosmo Kramer. Transcriptions of each of the episodes can be found on the fan site [Seinology.com](http://www.seinology.com/scripts-english.shtml). I scraped all the scripts using the `rvest` package. The first thing to grab is the link to each episode.
+*Seinfeld* ran for nine seasons from 1989 - 1998, with a total of 180 episodes. Often called "the show about nothing", the series was about Jerry Seinfeld, and his day to day life with friends George Costanza, Elaine Benes, and Cosmo Kramer. Transcriptions of each of the episodes can be found on the fan site [Seinology.com](http://www.seinology.com/scripts-english.shtml). I scraped all the scripts using the `rvest` package. The first thing to grab is the link to each episode.
 
 ```{r, eval=FALSE}
 library(tidyverse)
@@ -44,7 +44,7 @@ links <- read_html("http://www.seinology.com/scripts-english.shtml") %>%
   mutate(full_url = paste0("http://www.seinology.com/", url))
 ```
 
-I then wrote a function that takes the URL for an episode and pulls the necessary data. Unfortunately, as the scripts were submitted to the site by different fans of the show there is no standard format, making the scraping a little trickier. By using a combination of regular expressions and other tools, was are able to pull the necessary information. The function gets the needed data and returns a data frame where each row is a line of dialogue with the following variables:
+I then wrote a function that takes the URL for an episode and pulls the necessary data. Unfortunately, as the scripts were submitted to the site by different fans there is no standard format, making the scraping a little trickier. By using a combination of regular expressions and other tools, we are able to pull the necessary information. The function gets the needed data and returns a data frame where each row is a line of dialogue with the following variables:
 
 * `season`: the season the episode aired
 * `episode`: the episode number
@@ -162,7 +162,7 @@ seinfeld$scene_num[seinfeld$episode %in% c(54, 121)] <- NA
 
 ## Analysis
 
-Nearly all of the following analysis is adapted from the previously mentioned book, [Text Mining with R](http://tidytextmining.com/). The book is available online and does a fantastic job introducing text analysis, and giving examples of text mining. If you are interested in learning more- or doing your own analysis using this data- I highly recommend starting there.
+Nearly all of the following analysis is adapted from the previously mentioned book, [Text Mining with R](http://tidytextmining.com/). The book is available online and does a fantastic job introducing text analysis, and giving examples of text mining. This post uses some of the methods to begin to explore the dialogue of *Seinfeld*.
 
 We start by comparing word frequencies of the different characters. This analysis will be focused on the four main characters and how they compare to everyone else. There are some things we have to fix in the data before we can begin. In the first episode, Kramer is called Kessler so we change this. We then create a new variable that lists the speaker if they are one of Jerry, George, Elaine, or Kramer, and lists Other for everyone else. The data also includes some lines that are blank due to the script reading something like "ELAINE: (chuckles)" so we remove any blank lines as well. We then convert the text into a tidy one word per row format, and remove any [stop words](https://en.wikipedia.org/wiki/Stop_words) using an `anti_join`. With our data in a tidy format, we can begin to compare word frequencies of the main characters. We use tools from `dplyr` and `tidyr` [^2] to do this.
 
